--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,32 @@ jobs:
           gem install cocoapods
           pod install
 
+      - name: Verify Core Data Model
+        run: |
+          if [ ! -d "Tasky/Tasky.xcdatamodeld" ]; then
+            echo "Error: Core Data model not found!"
+            exit 1
+          fi
+          if [ ! -f "Tasky/Tasky.xcdatamodeld/.xccurrentversion" ]; then
+            echo "Error: .xccurrentversion file not found!"
+            exit 1
+          fi
+
       - name: Build and test
         run: |
-           xcodebuild clean build test -workspace Tasky.xcworkspace -scheme Tasky -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' ONLY_ACTIVE_ARCH=NO -allowProvisioningUpdates CODE_SIGNING_ALLOWED=NO
+          xcodebuild clean build test \
+            -workspace Tasky.xcworkspace \
+            -scheme Tasky \
+            -sdk iphonesimulator \
+            -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+            ONLY_ACTIVE_ARCH=NO \
+            -allowProvisioningUpdates \
+            CODE_SIGNING_ALLOWED=NO \
+            | xcpretty --report junit --output TestResults.xml
+
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-results
+          path: TestResults.xml
