--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,46 +1,33 @@
 name: Tasky CI
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+push:
+branches:
+- main
+pull_request:
+branches:
+- main
 
 jobs:
-  build:
-    runs-on: macos-latest
+build:
+runs-on: macos-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+yaml
+Copy code
+steps:
+  - name: Checkout code
+    uses: actions/checkout@v2
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '2.7'
+  - name: Set up Ruby
+    uses: ruby/setup-ruby@v1
+    with:
+      ruby-version: '2.7'
 
-      - name: Install CocoaPods
-        run: |
-          gem install cocoapods
-          pod install
+  - name: Install CocoaPods
+    run: |
+      gem install cocoapods
+      pod install
 
-      - name: Build and test
-        run: |
-          xcodebuild clean build test \
-            -workspace Tasky.xcworkspace \
-            -scheme Tasky \
-            -sdk iphonesimulator \
-            -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
-            ONLY_ACTIVE_ARCH=NO \
-            -allowProvisioningUpdates \
-            CODE_SIGNING_ALLOWED=NO \
-            | xcpretty --report junit --output TestResults.xml
-
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: test-results
-          path: TestResults.xml
+  - name: Build and test
+    run: |
+      xcodebuild clean build test -workspace Tasky.xcworkspace -scheme Tasky -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' ONLY_ACTIVE_ARCH=NO -allowProvisioningUpdates CODE_SIGNING_ALLOWED=NO
